# Library-Management-System

./: .gitignore  CMakeLists.txt  README.md
data/: audit_logs.txt  books.txt  members.txt
include/: adminSecurity.h  book.h  bookManagement.h  finePayment.h  loanReservation.h  member.h  memberManagement.h  reportingAnalytics.h  ui.h
src/: main.cpp
src/AdminSecurity/: adminSecurity.cpp
src/BookManagement/: bookManagement.cpp
src/FinePayment/: finePayment.cpp
src/LoanReservation/: loanReservation.cpp
src/MemberManagement/: memberManagement.cpp
src/ReportingAnalytics/: reportingAnalytics.cpp
src/UI/: ui.cpp
src/data/: books.txt  members.txt
src/library(deleteb,deletem,returnb,delete f,bookpop,password e/: library.cpp
